--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ rustix = { version = "1.1", features = ["fs", "mount"] }
 libc = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.9"
+env_logger = "0.11.8"
+chrono = "0.4.42"
 
 [profile.release]
 overflow-checks = false
