--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ serde_json = "1.0"
 toml = "0.9"
 chrono = "0.4"
 procfs = "0.17"
-mimalloc = "0.1"
+env_logger = "0.11.8"
+mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
 
 # Tracing Ecosystem
 tracing = "0.1"
